--- a/gb/25/8/26/n14581167.md
+++ b/gb/25/8/26/n14581167.md
@@ -8,7 +8,7 @@
 	<p>【大纪元2025年08月26日讯】中共正在为2025九三大阅兵造势，向世界宣示“厉害了，我的军”。但是，在表面光鲜热闹的背后，中共军队却乱象纷呈，让有良知和常识的人疑窦丛生。人们禁不住会问：中共军队到底怎么了？</p>
 <p>下面，就我观察到的中共军队乱象做一些介绍和分析。</p>
 </p>
-<p><center><a title="王友群：大阅兵前中共军队乱象纷呈【 #听纪元 】| #大纪元新闻" loading="lazy" data2-src=""></a><a href="https://d37g5boc7rm625.cloudfront.net/X1j6OEW4bRiw"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1ht97jn4pjg535pxFtcF8QJtZ1uc1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<p><center><a title="王友群：大阅兵前中共军队乱象纷呈【 #听纪元 】| #大纪元新闻" loading="lazy" data2-src=""></a><a href="https://d1ucfc2ix2o07u.cloudfront.net/E3p6OEW4bRim"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1ht97jn4pjg535pxFtcF8QJtZ1uc1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <h3><strong>第一，中央军委七缺三。</strong></h3>
 <p>中央军委是中共军队的最高统帅部。</p>
 <p>2022年中共二十大产生的中央军委共七人：中央军委主席习近平，副主席张又侠、何卫东，委员李尚福、苗华、刘振立、张升民。</p>
@@ -80,12 +80,12 @@
 <p>大纪元首发</p>
 <p>责任编辑：高义#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/25/n10086108.md#1" target="_blank">郑兢业：人吃与吃人（三）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/25/n9768373.md#1" target="_blank">北京女三中第一个共产党员的悲剧人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
